Редактирует путь homepage

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://yana-vovk.github.io/ice-cream-team10/",
+  "homepage": "https://yana-vovk.github.io/ice-cream-team10",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
