--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://yana-vovk.github.io/ice-cream-team10",
+  "homepage": "https://yana-vovk.github.io/ice-cream-team10/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
@@ -12,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yana-vovk/ice-cream-team10.git"
+    "url": "git+https://github.com/Yana-Vovk/ice-cream-team10.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Yana Vovk <yanavovk1990@outlook.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yana-vovk/ice-cream-team10/issues"
+    "url": "https://github.com/Yana-Vovk/ice-cream-team10/issues"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
