--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ice-cream-team10",
+  "name": "parcel-project-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://yana-vovk.github.io/ice-cream-team10/",
+  "homepage": "https://Yana-Vovk.github.io/ice-cream-team10",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
@@ -12,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Yana-Vovk/ice-cream-team10.git"
+    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
   },
   "keywords": [],
-  "author": "Yana Vovk <yanavovk1990@outlook.com>",
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Yana-Vovk/ice-cream-team10/issues"
+    "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
