Меянет name в package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "ice-cream-team10",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
