--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /zero-taem/",
+    "predeploy": "npm run build -- --public-url /zero-team/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4",
     "posthtml-include": "^1.4.3",
+    "prettier": "2.2.1",
     "sass": "^1.26.9"
   }
 }
