--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://gts-work.github.io/acecream",
+  "homepage": "https://gts-work.github.io/icecream",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /acecream/",
+    "predeploy": "npm run build -- --public-url /icecream/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
