поправляет некотыре изменения после пул реквеста

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://dmitry-karas.github.io/front-end__division--HellEN",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /parcel-project-template/",
+    "predeploy": "npm run build -- --public-url /front-end__division--HellEN/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
@@ -25,6 +25,5 @@
     "parcel-bundler": "^1.12.4",
     "posthtml-include": "^1.4.3",
     "sass": "^1.26.9"
-  },
-  "dependencies": {}
+  }
 }
