--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://dmitry-karas.github.io/front-end__division--HellEN",
+  "homepage": "https://goitacademy.github.io/parcel-project-template",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /front-end__division--HellEN/",
+    "predeploy": "npm run build -- --public-url /parcel-project-template/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
