исправил название проекта в package

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://rand0m-dev.github.io/group1-project/",
+  "homepage": "https://rand0m-dev.github.io/CodeCreators-project/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /group1-project/",
+    "predeploy": "npm run build -- --public-url /CodeCreators-project/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
