--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "posthtml-include": "^1.4.3",
     "sass": "^1.26.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "animate.css": "^4.1.1"
+  }
 }
