--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "sass": "^1.26.9"
   },
   "dependencies": {
-    "animate.css": "^4.1.1"
+    "animate.css": "^4.1.1",
+    "jquery": "^3.5.1",
+    "slick-carousel": "^1.8.1"
   }
 }
