--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://YuriiDolzhenko.github.io/parcel-project-template",
+  "homepage": "https://YuriiDolzhenko.github.io/ice__cream",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /parcel-project-template/",
+    "predeploy": "npm run build -- --public-url /ice__cream/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YuriiDolzhenko/parcel-project-template.git"
+    "url": "git+https://github.com/YuriiDolzhenko/ice__cream.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/YuriiDolzhenko/parcel-project-template/issues"
+    "url": "https://github.com/YuriiDolzhenko/ice__cream/issues"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
