--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://vadimbrikulya.github.io/parcel-project-template/",
+  "homepage": "https://vadimbrikulya.github.io/code-it/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /parcel-project-template/",
+    "predeploy": "npm run build -- --public-url /code-it/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
