--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "homepage": "https://vadimbrikulya.github.io/parcel-project-template/",
-  "scripts": {
+  "scripts": {    
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
     "predeploy": "npm run build -- --public-url /parcel-project-template/",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "clean" : "gh-pages-clean"
+    
   },
   "repository": {
     "type": "git",
@@ -26,4 +28,5 @@
     "posthtml-include": "^1.4.3",
     "sass": "^1.26.9"
   }
+  
 }
