--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /English_school",
+    "predeploy": "npm run build -- --public-url /English_school/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
