--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,52 @@
 {
     "cSpell.words": [
         "a",
+        "aa",
+        "aaaa",
+        "aaed",
+        "achh",
         "afb",
+        "ag",
         "apt",
         "arrow",
+        "b",
+        "ba",
         "bde",
         "be",
         "build",
         "building",
         "c",
+        "ca",
+        "caac",
+        "cd",
+        "cf",
+        "ch",
+        "ci",
+        "cn",
         "com",
         "configuration",
+        "css",
+        "ct",
+        "d",
         "deploy",
         "deploying",
         "dev",
         "developing",
         "dffaffa",
         "e",
+        "ea",
+        "eaae",
+        "eac",
+        "eacp",
+        "eacz",
         "en",
+        "example",
         "f",
+        "file",
         "fnxcymwk",
         "g",
+        "gaag",
+        "gagg",
         "gcc",
         "get",
         "gh",
@@ -29,24 +55,30 @@
         "github",
         "githubusercontent",
         "global",
+        "ha",
         "homepage",
         "html",
         "http",
         "https",
         "hub",
+        "iaai",
         "images",
         "install",
         "io",
         "js",
         "json",
+        "kaak",
         "linux",
         "localhost",
         "mac",
         "main",
         "make",
+        "mappings",
+        "names",
         "node",
         "nodejs",
         "npm",
+        "oaao",
         "org",
         "os",
         "p",
@@ -62,21 +94,27 @@
         "project",
         "public",
         "publishing",
+        "qaaq",
         "remote",
         "repeta",
         "run",
+        "saas",
         "sass",
         "scss",
         "setting",
         "shell",
+        "sources",
         "src",
         "sudo",
         "t",
+        "tbrrtbrtb",
         "template",
         "tools",
         "up",
         "url",
         "user",
+        "version",
+        "waaw",
         "windows",
         "youtu",
         "автоматически",
