--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,12 @@
         "ag",
         "apt",
         "arrow",
+        "article",
         "b",
         "ba",
         "bde",
         "be",
+        "blank",
         "build",
         "building",
         "c",
@@ -22,7 +24,9 @@
         "cf",
         "ch",
         "ci",
+        "class",
         "cn",
+        "code",
         "com",
         "configuration",
         "css",
@@ -55,14 +59,19 @@
         "github",
         "githubusercontent",
         "global",
+        "gt",
+        "h",
         "ha",
         "homepage",
+        "href",
         "html",
         "http",
         "https",
         "hub",
         "iaai",
         "images",
+        "include",
+        "index",
         "install",
         "io",
         "js",
@@ -70,13 +79,17 @@
         "kaak",
         "linux",
         "localhost",
+        "lt",
         "mac",
         "main",
         "make",
         "mappings",
+        "mdash",
         "names",
         "node",
         "nodejs",
+        "noopener",
+        "noreferrer",
         "npm",
         "oaao",
         "org",
@@ -86,6 +99,7 @@
         "pages",
         "parcel",
         "parens",
+        "partials",
         "posthtml",
         "powershell",
         "predeploy",
@@ -95,10 +109,13 @@
         "public",
         "publishing",
         "qaaq",
+        "rel",
         "remote",
         "repeta",
         "run",
         "saas",
+        "salespoints",
+        "salespoits",
         "sass",
         "scss",
         "setting",
@@ -107,6 +124,7 @@
         "src",
         "sudo",
         "t",
+        "target",
         "tbrrtbrtb",
         "template",
         "tools",
@@ -137,6 +155,7 @@
         "выглядит",
         "выполнив",
         "выполнить",
+        "главной",
         "главные",
         "главный",
         "глобально",
@@ -144,7 +163,9 @@
         "деплоить",
         "десятков",
         "для",
+        "добавление",
         "добавляйте",
+        "добавлять",
         "добавляются",
         "должен",
         "должны",
@@ -161,6 +182,7 @@
         "заранее",
         "и",
         "идёт",
+        "из",
         "изображения",
         "импортироваться",
         "имя",
@@ -170,10 +192,14 @@
         "как",
         "какое",
         "картинок",
+        "когда",
+        "код",
         "коде",
+        "командной",
         "команду",
         "команды",
         "компилятора",
+        "компиляции",
         "компьютерах",
         "компьютере",
         "копирует",
@@ -184,18 +210,23 @@
         "можно",
         "на",
         "нагружать",
+        "например",
         "не",
         "необходимо",
+        "несколько",
         "нет",
         "ничего",
         "нужно",
         "один",
+        "одном",
+        "определённой",
         "оптимизацией",
         "оптимизировав",
         "оптимизированные",
         "оптимизированными",
         "отредактированном",
         "отредактировать",
+        "очень",
         "ошибок",
         "пакеты",
         "папка",
@@ -204,10 +235,13 @@
         "папку",
         "паршалы",
         "перейти",
+        "пишет",
+        "плагин",
         "по",
         "повесит",
         "подключаются",
         "подключен",
+        "позволяет",
         "поле",
         "пользователей",
         "пользователя",
@@ -218,15 +252,21 @@
         "посмотреть",
         "поставить",
         "появится",
+        "при",
+        "пример",
         "примером",
         "продакшен",
         "проект",
         "проекта",
+        "проектах",
+        "происходит",
         "просто",
         "процесс",
         "работы",
         "раз",
         "разметке",
+        "разметкой",
+        "разработке",
         "разработки",
         "режим",
         "режиме",
@@ -239,6 +279,7 @@
         "свои",
         "свойстве",
         "свойство",
+        "синтаксис",
         "систему",
         "скрипт",
         "слабых",
@@ -247,19 +288,23 @@
         "со",
         "содержимое",
         "создать",
+        "сразу",
         "стилей",
         "стили",
         "страниц",
         "страницу",
         "страницы",
+        "студенческих",
         "сюда",
         "так",
         "также",
+        "такого",
         "терминале",
         "то",
         "того",
         "удаленного",
         "удаленном",
+        "удобно",
         "указанному",
         "указано",
         "успешной",
@@ -273,12 +318,17 @@
         "файлов",
         "файлы",
         "фрагмента",
+        "фрагментов",
         "фрагменты",
         "хостинга",
+        "хранятся",
+        "части",
         "чего",
+        "человек",
         "через",
         "чтобы",
         "это",
-        "этого"
+        "этого",
+        "этот"
     ]
 }
