--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,12 +11,10 @@
         "ag",
         "apt",
         "arrow",
-        "article",
         "b",
         "ba",
         "bde",
         "be",
-        "blank",
         "build",
         "building",
         "c",
@@ -26,9 +24,7 @@
         "cf",
         "ch",
         "ci",
-        "class",
         "cn",
-        "code",
         "com",
         "configuration",
         "css",
@@ -61,19 +57,14 @@
         "github",
         "githubusercontent",
         "global",
-        "gt",
-        "h",
         "ha",
         "homepage",
-        "href",
         "html",
         "http",
         "https",
         "hub",
         "iaai",
         "images",
-        "include",
-        "index",
         "install",
         "io",
         "js",
@@ -81,17 +72,13 @@
         "kaak",
         "linux",
         "localhost",
-        "lt",
         "mac",
         "main",
         "make",
         "mappings",
-        "mdash",
         "names",
         "node",
         "nodejs",
-        "noopener",
-        "noreferrer",
         "npm",
         "oaao",
         "org",
@@ -101,7 +88,6 @@
         "pages",
         "parcel",
         "parens",
-        "partials",
         "posthtml",
         "powershell",
         "predeploy",
@@ -111,13 +97,10 @@
         "public",
         "publishing",
         "qaaq",
-        "rel",
         "remote",
         "repeta",
         "run",
         "saas",
-        "salespoints",
-        "salespoits",
         "sass",
         "scss",
         "setting",
@@ -126,7 +109,6 @@
         "src",
         "sudo",
         "t",
-        "target",
         "tbrrtbrtb",
         "template",
         "tools",
@@ -157,7 +139,6 @@
         "выглядит",
         "выполнив",
         "выполнить",
-        "главной",
         "главные",
         "главный",
         "глобально",
@@ -165,9 +146,7 @@
         "деплоить",
         "десятков",
         "для",
-        "добавление",
         "добавляйте",
-        "добавлять",
         "добавляются",
         "должен",
         "должны",
@@ -184,7 +163,6 @@
         "заранее",
         "и",
         "идёт",
-        "из",
         "изображения",
         "импортироваться",
         "имя",
@@ -194,14 +172,10 @@
         "как",
         "какое",
         "картинок",
-        "когда",
-        "код",
         "коде",
-        "командной",
         "команду",
         "команды",
         "компилятора",
-        "компиляции",
         "компьютерах",
         "компьютере",
         "копирует",
@@ -212,23 +186,18 @@
         "можно",
         "на",
         "нагружать",
-        "например",
         "не",
         "необходимо",
-        "несколько",
         "нет",
         "ничего",
         "нужно",
         "один",
-        "одном",
-        "определённой",
         "оптимизацией",
         "оптимизировав",
         "оптимизированные",
         "оптимизированными",
         "отредактированном",
         "отредактировать",
-        "очень",
         "ошибок",
         "пакеты",
         "папка",
@@ -237,13 +206,10 @@
         "папку",
         "паршалы",
         "перейти",
-        "пишет",
-        "плагин",
         "по",
         "повесит",
         "подключаются",
         "подключен",
-        "позволяет",
         "поле",
         "пользователей",
         "пользователя",
@@ -254,21 +220,15 @@
         "посмотреть",
         "поставить",
         "появится",
-        "при",
-        "пример",
         "примером",
         "продакшен",
         "проект",
         "проекта",
-        "проектах",
-        "происходит",
         "просто",
         "процесс",
         "работы",
         "раз",
         "разметке",
-        "разметкой",
-        "разработке",
         "разработки",
         "режим",
         "режиме",
@@ -281,7 +241,6 @@
         "свои",
         "свойстве",
         "свойство",
-        "синтаксис",
         "систему",
         "скрипт",
         "слабых",
@@ -290,23 +249,19 @@
         "со",
         "содержимое",
         "создать",
-        "сразу",
         "стилей",
         "стили",
         "страниц",
         "страницу",
         "страницы",
-        "студенческих",
         "сюда",
         "так",
         "также",
-        "такого",
         "терминале",
         "то",
         "того",
         "удаленного",
         "удаленном",
-        "удобно",
         "указанному",
         "указано",
         "успешной",
@@ -320,17 +275,12 @@
         "файлов",
         "файлы",
         "фрагмента",
-        "фрагментов",
         "фрагменты",
         "хостинга",
-        "хранятся",
-        "части",
         "чего",
-        "человек",
         "через",
         "чтобы",
         "это",
-        "этого",
-        "этот"
+        "этого"
     ]
 }
