--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.26.9"
   },
   "dependencies": {
-    "animate.css": "^4.1.1"
+    "animate.css": "^4.1.1",
+    "jquery": "^3.6.0"
   }
 }
