--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@mayakravtsova 
+d-afanasiev
+/
+parcel-project-template
+forked from goitacademy/parcel-project-template
+0
+0617
+Code
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+parcel-project-template/.gitignore
+@stas-yushkov
+stas-yushkov upd
+Latest commit 144417f 1 hour ago
+ History
+ 2 contributors
+@luxplanjay@stas-yushkov
+112 lines (82 sloc)  1.64 KB
+  
 package-lock.json
 package.json
 
@@ -110,3 +141,15 @@ dist
 
 # TernJS port file
 .tern-port
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
