Section Reviews done (without slider)

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "parcel-bundler": "1.12.3",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "slick-carousel": "^1.8.1"
   }
 }
