--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "desandro-matches-selector": "^2.0.2",
+    "ev-emitter": "^2.1.0",
+    "fizzy-ui-utils": "^3.0.0",
+    "get-size": "^2.0.3",
+    "jquery": "^3.6.0",
+    "masonry-layout": "^4.2.2",
+    "outlayer": "^2.1.1"
   }
 }
