--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "desandro-matches-selector": "^2.0.2",
+    "ev-emitter": "^2.1.0",
+    "fizzy-ui-utils": "^3.0.0",
+    "get-size": "^2.0.3",
+    "jquery": "^3.6.0",
+    "masonry-layout": "^4.2.2",
+    "outlayer": "^2.1.1"
   }
 }
