--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://github.com/haiduknavy/parcel-project-template",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /haiduknavy.github.io/parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /haiduknavy/parcel-project-template/"
   },
   "repository": {
     "type": "git",
