--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "group-9-project",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
