--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,6 @@
 {
     "url": "https://api.openweathermap.org/data/2.5/",
+    "urlIcon": "http://openweathermap.org/img/wn/",
     "apiKey": "b2e20a408d2fb97b7ae2d0be72bcb7e8",
     "units": "metric"
 }
