--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "scss-7-in-1": "^1.1.2"
   }
 }
