--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://karaaa006.github.io/parcel-project-template",
+  "homepage": "https://karaaa006.github.io/icecream-project",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /icecream-project/"
   },
   "repository": {
     "type": "git",
