--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "parcel-project-template",
+  "name": "icecream-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Anurov-Prihodko.github.io/parcel-project-template",
+  "homepage": "https://Anurov-Prihodko.github.io/icecream-project",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /parcel-project-template/",
+    "predeploy": "npm run build -- --public-url /icecream-project/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/goitacademy/icecream-project.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Olekciiy Anurov-Prihodko <amyr.prihodko2akk@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/goitacademy/icecream-project/issues"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
