--- a/package.json
+++ b/package.json
@@ -25,11 +25,19 @@
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
   "dependencies": {
     "@pnotify/core": "^5.2.0",
     "handlebars": "^4.7.7"
+  },
+  "staticFiles": {
+    "staticPath": [
+      {
+        "staticPath": "src/images/team"
+      }
+    ]
   }
 }
