--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "@pnotify/core": "^5.2.0",
     "handlebars": "^4.7.7"
   },
