--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "dependencies": {
     "@pnotify/core": "^5.2.0",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "lodash.throttle": "^4.1.1"
   },
   "staticFiles": {
     "staticPath": [
