--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "tui-pagination": "^3.4.1"
+    "debounce": "^1.2.1",
+    "tui-pagination": "^3.4.1",
+    "validator": "^13.6.0"
   }
 }
