added gallery adapter

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /ariva-team-filmoteka-project/"
   },
+  "staticFiles": {
+    "staticPath": "src/public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/goitacademy/parcel-project-template.git"
@@ -22,6 +25,7 @@
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
