add authorithation in firebase

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "firebase": "^9.10.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "modern-normalize": "^1.1.0",
