--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "bootstrap.native": "^3.0.13",
+    "lodash.throttle": "^4.1.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "parcel-plugin-nuke-dist": "^1.0.1",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
