--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "parcel-project-template",
+  "name": "parcel-project-filmoteka",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://rafalgalecki.github.io/parcel-project-filmoteka",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
