--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "parcel-project-filmoteka",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://rafalgalecki.github.io/parcel-project-filmoteka",
