--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://your_username.github.io/your_repo_name/",
+  "homepage": "https://pawelbogusz1.github.io/goit-js-hw-08/",
   "scripts": {
-    "build": "parcel build src/*.html --public-url /your_repo_name/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   
   },
   "repository": {
