--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "homepage": "https://pawelbogusz1.github.io/goit-js-hw-08/",
   "scripts": {
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
-  
   },
   "repository": {
     "type": "git",
@@ -18,6 +17,8 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@vimeo/player": "^2.18.0",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.12.1"
   },
