--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "homepage": "https://pawelbogusz1.github.io/goit-js-hw-08/",
   "scripts": {
+    "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
