--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "parcel-project-templatea",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://tutor-fs1.github.io/icecream-whatever",
