--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "Team1",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://xsaizo.github.io/Team1",
